# InvenesisDBapp

./: .gitignore  CMakeLists.txt  ClickableLabel.h  DEVELOPER_GUIDE.md  Database.h  POSTGRESQL_SETUP.md  Plate1536Dialog.cpp  Plate1536Dialog.h  PlateMapDialog.cpp  PlateMapDialog.h  PlateWidget.cpp  PlateWidget.h  additemdialog.cpp  additemdialog.h  additemdialog.ui  build_system_test_report.md  customproxymodel.cpp  customproxymodel.h  databaseviewwindow.cpp  databaseviewwindow.ui  daughterplatewidget.cpp  daughterplatewidget.h  draggabletableview.cpp  draggabletableview.h  generategwldialog.cpp  gwlgenerator.cpp  gwlgenerator.h  include_fixes_summary.md  loadexperimentdialog.cpp  loadexperimentdialog.h  loadexperimentdialog.ui  logindialog.cpp  main.cpp  matrixplatecontainer.cpp  matrixplatecontainer.h  matrixplatewidget.cpp  matrixplatewidget.h  qtbcrypt.h  resetpassworddialog.cpp  resetpassworddialog.h  (+6 more)
.github/workflows/: build-and-publish.yml
.kiro/specs/icon-restoration/: design.md  requirements.md  tasks.md
.kiro/specs/project-restructure/: design.md  requirements.md  tasks.md
app/: CMakeLists.txt  appicon.rc  main.cpp
installer-config/config/: config.xml
jsonfile/: standards_matrix.json  volumeMap.json
src/: CMakeLists.txt
src/authentication/: CMakeLists.txt  logindialog.cpp  logindialog.h  logindialog.ui  qtbcrypt.cpp  qtbcrypt.h  resetpassworddialog.cpp
src/common/: CMakeLists.txt  ClickableLabel.h
src/database/: CMakeLists.txt  Database.h  customproxymodel.cpp  customproxymodel.h  draggabletableview.cpp  draggabletableview.h
src/plate_management/: CMakeLists.txt  PlateMapDialog.cpp  PlateMapDialog.h  PlateMapDialog.ui  PlateWidget.cpp  daughterplatewidget.h  matrixplatecontainer.cpp  matrixplatewidget.cpp
src/tecan_integration/: CMakeLists.txt  generategwldialog.cpp  generategwldialog.h  gwlgenerator.cpp  gwlgenerator.h  standardlibrary.cpp  standardselectiondialog.cpp  standardselectiondialog.h  standardselectiondialog.ui  tecanwindow.cpp  tecanwindow.h  tecanwindow.ui
src/ui/: CMakeLists.txt  additemdialog.cpp  additemdialog.h  additemdialog.ui  databaseviewwindow.cpp  databaseviewwindow.h  databaseviewwindow.ui  loadexperimentdialog.cpp  loadexperimentdialog.h  loadexperimentdialog.ui
src/update_mangement/: CMakeLists.txt  UpdateChecker.cpp  UpdateChecker.h
